@@ -11,69 +11,48 @@ import Model.ProductTerm;
 public class OptionsPanel extends JPanel {
     private MainFrame mainFrame;
     private PanelDecorator decorator;
-    private Control.Event event;
+    private Event event;
 
     private JButton categoryButton;
     private JButton brandButton;
     private JButton colorButton;
 
-    private JPanel displayingResult;
-    private JPanel inputPanel;
     private JPanel resultPanel;
-
     private ProductTerm currentProductTerm;
 
-    public OptionsPanel(MainFrame mainFrame, PanelDecorator decorator, Control.Event event) {
-        System.out.println("optionsPanel constructor is reached");
+    public OptionsPanel(MainFrame mainFrame, PanelDecorator decorator, Event event) {
         this.mainFrame = mainFrame;
-        this.event = event;
         this.decorator = decorator;
-        if (event.getExtraContents() != null){
-            System.out.println("extra contents: " + event.getExtraContents().getClass());
-        }
+        this.event = event;
+
         setLayout(new BorderLayout());
         setBackground(Colors.panel());
-        this.displayingResult = new JPanel();
-        displayingResult.setLayout(new BoxLayout(displayingResult, BoxLayout.Y_AXIS));
-        decorator.adjustWrapperPanel(displayingResult);
 
         JPanel categoryPanel = getCategoryPanel();
-        displayingResult.add(categoryPanel);
-        displayingResult.add(Box.createVerticalStrut(5));
+        add(categoryPanel, BorderLayout.NORTH);
 
-        this.resultPanel = new JPanel();
+
+        resultPanel = new JPanel();
         resultPanel.setLayout(new BoxLayout(resultPanel, BoxLayout.Y_AXIS));
+        resultPanel.setBackground(Colors.panel());
         decorator.adjustWrapperPanel(resultPanel);
-        displayingResult.add(resultPanel);
 
-        displayingResult.add(Box.createVerticalStrut(5));
-
-        JPanel wrapperPanel = new JPanel();
-        wrapperPanel.setBackground(Colors.panel());
-        wrapperPanel.setBorder(BorderFactory.createEmptyBorder(10, 40, 10, 40));
-        decorator.adjustWrapperPanel(wrapperPanel);
-        this.inputPanel = wrapperPanel;
-
-        JScrollPane scrollResults = new JScrollPane(displayingResult);
+        JScrollPane scrollResults = new JScrollPane(resultPanel);
         scrollResults.setVerticalScrollBarPolicy(JScrollPane.VERTICAL_SCROLLBAR_AS_NEEDED);
         scrollResults.setHorizontalScrollBarPolicy(JScrollPane.HORIZONTAL_SCROLLBAR_NEVER);
-        scrollResults.setPreferredSize(new Dimension(550, 400));
 
-        inputPanel.add(scrollResults);
-        add(inputPanel, BorderLayout.CENTER);
+        add(scrollResults, BorderLayout.CENTER);
 
         updateResults(event.getContents());
     }
 
     private JPanel getCategoryPanel() {
         JPanel categoryPanel = new JPanel(new FlowLayout(FlowLayout.LEFT));
-        JPanel wrapperPanel = new JPanel();
-        wrapperPanel.setLayout(new BoxLayout(wrapperPanel, BoxLayout.X_AXIS));
         decorator.adjustWrapperPanel(categoryPanel);
-        decorator.adjustWrapperPanel(wrapperPanel);
 
         JLabel filterLabel = new JLabel("Filter on:");
         decorator.adjustLabel(filterLabel);
+        categoryPanel.add(filterLabel);
 
         categoryButton = new JButton("Category");
         categoryButton.addActionListener(_ -> triggerChoice(ProductTerm.Category));
@@ -87,13 +66,11 @@ public class OptionsPanel extends JPanel {
         JButton[] buttons = {categoryButton, brandButton, colorButton};
         for (JButton b : buttons) {
             decorator.adjustButton(b);
+            categoryPanel.add(Box.createHorizontalStrut(5));
             categoryPanel.add(b);
-            categoryPanel.add(Box.createHorizontalStrut(10));
         }
 
-        wrapperPanel.add(filterLabel);
-        wrapperPanel.add(categoryPanel);
-        return wrapperPanel;
+        return categoryPanel;
     }
 
     private void triggerChoice(ProductTerm term) {
@@ -105,19 +82,6 @@ public class OptionsPanel extends JPanel {
     }
 
     public void updateResults(Object data) {
-        System.out.println("update result is reached");
-        if (data != null){
-            System.out.println("data instance of: " + data.getClass());
-            if (data instanceof List list) {
-                System.out.println("data is list");
-                if (!list.isEmpty()) {
-                    System.out.println("list is: " + list.getFirst().getClass());
-                }
-                else {
-                    System.out.println("list is empty");
-                }
-            }
-        }
         resultPanel.removeAll();
         currentProductTerm = ProductTerm.Category;
 
@@ -125,26 +89,26 @@ public class OptionsPanel extends JPanel {
             currentProductTerm = pt;
         }
 
-        if (data instanceof List list && !list.isEmpty()) {
-            if (list.getFirst() instanceof Product) {
-
-                List<Product> shoes = (List<Product>) list;
-
-                JPanel wrapper = new JPanel(new BorderLayout());
-                wrapper.add(createAllShoePanels(shoes), BorderLayout.NORTH);
-                resultPanel.add(wrapper);
-                repaint();
-                revalidate();
-            } else if (list.getFirst() instanceof String) {
+        if (data instanceof List<?> list && !list.isEmpty()) {
+            if (list.get(0) instanceof Product) {
+                List<Product> products = (List<Product>) list;
+                for (Product p : products) {
+                    resultPanel.add(createShoePanel(p));
+                    resultPanel.add(Box.createVerticalStrut(15));
+                }
+            } else if (list.get(0) instanceof String) {
                 List<String> output = (List<String>) list;
                 for (String s : output) {
-                    JPanel singleResultPanel = new JPanel();
+                    JPanel singleResultPanel = new JPanel(new FlowLayout(FlowLayout.LEFT));
                     decorator.adjustSingleResultPanel(singleResultPanel);
+
                     JButton button = new JButton(s);
                     decorator.adjustButton(button);
                     button.addActionListener(_ -> sendUserChoice(s));
+
                     singleResultPanel.add(button);
                     resultPanel.add(singleResultPanel);
+                    resultPanel.add(Box.createVerticalStrut(5));
                 }
             }
         }
@@ -152,76 +116,72 @@ public class OptionsPanel extends JPanel {
         resultPanel.revalidate();
         resultPanel.repaint();
     }
-    private JPanel createAllShoePanels(List<Product> products) {
-        System.out.println("createAllShoePanels is reached");
-        JPanel allShoesPanel = new JPanel(new GridLayout(0, 3, 20, 20));
-        allShoesPanel.setBorder(BorderFactory.createEmptyBorder(10, 10, 10, 10));
-        allShoesPanel.setBackground(Colors.panel());
 
-        for (Product p : products) {
-            System.out.println("product is: " + p.getName());
-            JPanel shoePanel = new JPanel();
-            shoePanel.setLayout(new BoxLayout(shoePanel, BoxLayout.Y_AXIS));
-            decorator.adjustShoeInfoPanel(shoePanel);
+    private JPanel createShoePanel(Product p) {
+        JPanel shoePanel = new JPanel();
+        shoePanel.setLayout(new BoxLayout(shoePanel, BoxLayout.Y_AXIS));
+        shoePanel.setBorder(BorderFactory.createLineBorder(Color.LIGHT_GRAY, 1, true));
+        shoePanel.setBackground(Colors.card());
+        decorator.adjustShoeInfoPanel(shoePanel);
 
-            JLabel shoeBrand = new JLabel(p.getBrand());
-            JLabel shoeName = new JLabel(p.getName());
-            JLabel priceLabel = new JLabel(String.valueOf(p.getPrice()));
+        JLabel shoeBrand = new JLabel(p.getBrand());
+        JLabel shoeName = new JLabel(p.getName());
+        JLabel priceLabel = new JLabel("$" + p.getPrice());
 
-            shoePanel.add(shoeBrand);
-            shoePanel.add(shoeName);
-            shoePanel.add(Box.createVerticalStrut(10));
-            shoePanel.add(priceLabel);
-            shoePanel.add(Box.createVerticalGlue());
+        shoePanel.add(shoeBrand);
+        shoePanel.add(shoeName);
+        shoePanel.add(priceLabel);
+        shoePanel.add(Box.createVerticalStrut(10));
 
-            JTextArea description = new JTextArea(p.getDescription());
-            description.setEditable(false);
-            shoePanel.add(description);
+        JTextArea description = new JTextArea(p.getDescription());
+        description.setEditable(false);
+        description.setLineWrap(true);
+        description.setWrapStyleWord(true);
+        description.setBackground(Colors.card());
+        shoePanel.add(description);
 
-            JButton shoeButton = new JButton("See details");
-            decorator.adjustButton(shoeButton);
-            shoeButton.addActionListener(_ -> {
-                try {
-                    mainFrame.Update(new Event(
-                            Event.Phase.SELECT,
-                            Event.Action.CHOOSE_TYPE,
-                            Event.Subject.SHOE,
-                            Event.Origin.GUI,
-                            Event.Outcome.PENDING,
-                            p,
-                            null
-                    ));
-                } catch (Exception e) {
-                    throw new RuntimeException(e);
-                }
-            });
-            shoePanel.add(shoeButton);
-
-            JPanel colorPanel = new JPanel(new FlowLayout(FlowLayout.LEFT));
-            colorPanel.setBackground(Colors.card());
-            for (String c : p.getColors()) {
-                JLabel cLabel = new JLabel(c);
-                decorator.adjustLabel(cLabel);
-                cLabel.setBorder(BorderFactory.createEmptyBorder(0, 5, 0, 5));
-                colorPanel.add(cLabel);
+        JButton shoeButton = new JButton("See details");
+        decorator.adjustButton(shoeButton);
+        shoeButton.addActionListener(_ -> {
+            try {
+                mainFrame.Update(new Event(
+                        Event.Phase.SELECT,
+                        Event.Action.CHOOSE_TYPE,
+                        Event.Subject.SHOE,
+                        Event.Origin.GUI,
+                        Event.Outcome.PENDING,
+                        p,
+                        null
+                ));
+            } catch (Exception e) {
+                throw new RuntimeException(e);
             }
-            shoePanel.add(colorPanel);
+        });
+        shoePanel.add(shoeButton);
 
-            JPanel sizePanel = new JPanel(new FlowLayout(FlowLayout.LEFT));
-            sizePanel.setBackground(Colors.card());
-            for (Integer size : p.getSizes()) {
-                JLabel sizeLabel = new JLabel(String.valueOf(size));
-                decorator.adjustLabel(sizeLabel);
-                sizeLabel.setBorder(BorderFactory.createEmptyBorder(0, 5, 0, 5));
-                sizePanel.add(sizeLabel);
-            }
-            shoePanel.add(sizePanel);
-            allShoesPanel.add(shoePanel);
-            allShoesPanel.setPreferredSize(new Dimension(500, 400));
-
+        // Färger
+        JPanel colorPanel = new JPanel(new FlowLayout(FlowLayout.LEFT));
+        colorPanel.setBackground(Colors.card());
+        for (String c : p.getColors()) {
+            JLabel cLabel = new JLabel(c);
+            decorator.adjustLabel(cLabel);
+            cLabel.setBorder(BorderFactory.createEmptyBorder(0, 5, 0, 5));
+            colorPanel.add(cLabel);
         }
+        shoePanel.add(colorPanel);
 
-        return allShoesPanel;
+        // Storlekar
+        JPanel sizePanel = new JPanel(new FlowLayout(FlowLayout.LEFT));
+        sizePanel.setBackground(Colors.card());
+        for (Integer size : p.getSizes()) {
+            JLabel sizeLabel = new JLabel(String.valueOf(size));
+            decorator.adjustLabel(sizeLabel);
+            sizeLabel.setBorder(BorderFactory.createEmptyBorder(0, 5, 0, 5));
+            sizePanel.add(sizeLabel);
+        }
+        shoePanel.add(sizePanel);
+
+        return shoePanel;
     }
 
     private void sendUserChoice(String choice) {
